# Ekanam_ml_template

./: .gitignore  Makefile  README.md  cookiecutter.json  dvc.yaml  pyproject.toml  setup.py
configs/: config.yaml
hooks/: post_gen_project.py
requirements/: dev.txt  production.txt
scripts/: setup_environment.sh
src/data/: __init__.py  make_dataset.py
src/sql_scripts/: README.md
tests/: test_data.py
{{cookiecutter.repo_name}}/: .gitignore  Makefile  README.md  pyproject.toml  setup.py
{{cookiecutter.repo_name}}/src/data/: make_dataset.py
{{cookiecutter.repo_name}}/src/models/: evaluate.py  train.py
{{cookiecutter.repo_name}}/src/utils/: s3.py
